<resources>
    <string name="app_name">WakaRun</string>

    <!--载入界面 SplashActivity-->
    <string name="title_activity_splash">载入界面</string>
    <string name="btn_sign_up_splash_activity">注册</string>
    <string name="btn_sign_in_splash_activity">登录</string>

    <!--登录 SignInAcitivty-->
    <string name="title_sign_in_activity">登录或注册</string>
    <string name="prompt_account_sign_in_activity">请输入账号</string>
    <string name="prompt_password_sign_in_activity">请输入密码</string>
    <string name="btn_sign_up_sign_in_activity">注册</string>
    <string name="btn_sign_in_sign_in_activity">登录</string>
    <string name="prompt_account_not_exist_sign_in_activity">用户名不存在</string>
    <string name="prompt_password_error_sign_in_activity">密码不正确，请重新输入</string>

    <!--注册 SignUpAcitivty-->
    <string name="title_sign_up_activity">注册</string>
    <string name="prompt_account_sign_up_activity">请输入用户名</string>
    <string name="prompt_password_sign_up_activity">请输入密码</string>
    <string name="prompt_password_again_sign_up_activity">请再次输入密码</string>
    <string name="prompt_nickname_sign_up_activity">起个好听的昵称吧</string>
    <string name="btn_sign_up_sign_up_activity">注册</string>
    <string name="prompt_account_not_null_sign_up_activity">用户名不能为空</string>
    <string name="prompt_password_not_null_sign_up_activity">密码不能为空</string>
    <string name="prompt_passwordagain_not_same_sign_up_activity">两次输入的密码不一致</string>
    <string name="prompt_nickname_not_null_sign_up_activity">昵称不能为空</string>
    <string name="prompt_account_already_exist_sign_up_activity">用户名已存在</string>

    <!--主界面 MainActivity-->
    <string name="tab_text_pedometer_main_activity">计步</string>
    <string name="tab_text_history_main_activity">历史</string>
    <string name="tab_text_discovery_main_activity">发现</string>
    <string name="prompt_double_exit_tips_main_activity">再按一次退出程序</string>
    <!--侧滑菜单 DrawerMenu-->
    <string name="actionbar_drawer_toggle_open_main_activity">Open</string>
    <string name="actionbar_drawer_toggle_close_main_activity">Close</string>
    <string name="nav_title_service_switch_main_activity">后台开关</string>
    <string name="nav_start_service_main_activity">开始计步服务</string>
    <string name="nav_stop_service_main_activity">停止计步服务</string>
    <string name="nav_mine_main_activity">个人中心</string>
    <string name="nav_logout_main_activity">退出登录</string>
    <string name="prompt_confirm_logout_main_activity">确定要退出登录吗？</string>
    <string name="btn_confirm_main_activity">确定</string>
    <string name="btn_cancel_main_activity">取消</string>
    <!--计步服务 PedometerService-->
    <string name="prompt_no_use_sensor_pedometer_service">没有可用的传感器</string>
    <string name="prompt_notification_ticker_pedometer_service">开始计步</string>
    <string name="prompt_notification_title_step_pedometer_service">步</string>
    <string name="prompt_notification_text_calories_pedometer_service">千卡</string>
    <!--计步碎片 PedometerFragment-->
    <string name="prompt_input_max_step_pedometer_fragment">请输入最大步数</string>

    <!--个人信息 MineActivity-->
    <string name="title_activity_mine">编辑个人信息</string>
    <string name="btn_change_headicon_mine_activity">修改头像</string>
    <string name="prompt_nickname_mine_activity">昵称</string>
    <string name="prompt_sex_male_mine_activity">男</string>
    <string name="prompt_sex_female_mine_activity">女</string>
    <string name="prompt_height_mine_activity">身高:</string>
    <string name="prompt_height_unit_mine_activity">厘米</string>
    <string name="prompt_weight_mine_activity">体重:</string>
    <string name="prompt_weight_unit_mine_activity">公斤</string>

    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="title_activity_weather">WeatherActivity</string>

</resources>
