<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/ic_explore_white_24dp"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/ic_import_contacts_white_24dp"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@mipmap/ic_directions_run_white_24dp"
            android:title="Slideshow" />
    </group>

    <item android:title="@string/nav_title_service_switch_main_activity">
        <menu>
            <item
                android:id="@+id/nav_start_service"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/nav_start_service_main_activity" />
            <item
                android:id="@+id/nav_stop_service"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/nav_stop_service_main_activity" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@mipmap/ic_power_settings_new_white_24dp"
        android:title="@string/nav_logout_main_activity" />

</menu>
